2023-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure strict typing for PHP time limit, resolves #264

2023-01-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt to new connector services registry, resolves #263

2023-01-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 7.2, resolves #262
	* Release version 6.2.1

2022-12-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.2.0

2022-11-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce child records sorting feature, resolves #256

2022-11-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix wrong copying of data when denormalizing with substructure fields

2022-11-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix wrong class name in code example, resolves #258

2022-10-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fire substructure preprocess event also for XML-type structures, resolves #257

2022-10-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.1.1

2022-10-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Avoid overwriting BE users custom permissions (thanks to Mario Lubenka)

2022-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve exception handling in case of missing configuration, resolves #242
	* Clean up usage of ObjectManager, resolves #252
	* Release version 6.1.0

2022-08-31 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve and restructure documentation, resolves #215

2022-08-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Skip import of records with no reference uid, resolves #241

2022-08-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Remove handling of time zone in date transformation user function, resolves #226

2022-08-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow specific field configuration when using useColumnIndex, resolves #219

2022-08-18 Francois Suter (Idéative)  <typo3@ideative.ch>
