@@ -1,3 +1,7 @@
+2023-01-18 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Add possibility to override storage pid at runtime, resolves #265
+
 2023-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Ensure strict typing for PHP time limit, resolves #264
